# ChatMem

./: .gitignore  .mcp.json  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.agents/plugins/: marketplace.json
.github/workflows/: release.yml
crates/agentswap-claude/: Cargo.toml
crates/agentswap-claude/src/: adapter.rs  parser.rs
crates/agentswap-claude/tests/: integration.rs
crates/agentswap-codex/: Cargo.toml
crates/agentswap-codex/src/: adapter.rs
crates/agentswap-core/: Cargo.toml
crates/agentswap-core/src/: adapter.rs  files.rs  lib.rs  tool_mapping.rs  types.rs
crates/agentswap-gemini/: Cargo.toml
crates/agentswap-gemini/src/: adapter.rs  parser.rs
crates/agentswap-opencode/: Cargo.toml
crates/agentswap-opencode/src/: adapter.rs  lib.rs
docs/: CHATMEM_CONTROL_PLANE.md  CHATMEM_MCP_SETUP.md  CHATMEM_PRODUCT_STRATEGY.md  CHATMEM_RELEASE_CHECKLIST.md  CHATMEM_RETRIEVAL_BENCHMARKS.md
mcp/: run-chatmem-mcp.ps1
plugins/chatmem/: .mcp.json
plugins/chatmem/.claude-plugin/: plugin.json
scripts/: build-portable.ps1  regenerate-icons.ps1  sync-chatmem-plugin.ps1
skills/chatmem/: SKILL.md
src/: App.tsx  AppLite.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_integration.rs  lib.rs  main.rs
src-tauri/src/chatmem_memory/: a2a.rs  checkpoints.rs  chunks.rs  db.rs  embedding.rs  eval.rs  handoff.rs  mcp.rs  mod.rs  models.rs  repo_identity.rs  runs.rs  search.rs  store.rs  sync.rs
src/__tests__/: App.test.tsx  CheckpointsWorkspace.test.tsx  ConversationDetail.test.tsx  ConversationList.test.tsx  HandoffLifecycle.test.tsx  LibraryWorkspace.test.tsx  MemoryFreshness.test.tsx  MemoryInboxPanel.test.tsx  MemoryWorkspace.test.tsx  ProjectIndexStatus.test.tsx  RepoMemoryPanel.test.tsx  RunsWorkspace.test.tsx  SyncSettings.test.tsx  integrationManifests.test.ts  libraryModel.test.ts  releaseWorkflow.test.ts  titleUtils.test.ts
src/chatmem-memory/: api.ts  types.ts
src/components/: ApprovalsPanel.tsx  ArtifactsPanel.tsx  CheckpointsPanel.tsx  ConversationDetail.tsx  ConversationList.tsx  EpisodesPanel.tsx  HandoffComposerModal.tsx  HandoffsPanel.tsx  LibraryPanel.tsx  MemoryInboxPanel.tsx  MigrateModal.tsx  ProjectIndexStatus.tsx  RepoMemoryPanel.tsx  RunsPanel.tsx  SettingsPanel.tsx
src/i18n/: I18nProvider.tsx  strings.ts  types.ts
src/settings/: storage.ts
src/updater/: updater.ts
src/utils/: dateUtils.ts  projectPaths.ts  titleUtils.ts
(+37 files in other folders)
