[package]
name = "chatmem"
version = "0.1.0"
description = "ChatMem - Your AI conversations, forever remembered"
authors = ["ChatMem"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["shell-open", "updater"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }

# AgentSwap core dependencies
agentswap-core = { path = "../../agentswap/crates/agentswap-core" }
agentswap-claude = { path = "../../agentswap/crates/agentswap-claude" }
agentswap-codex = { path = "../../agentswap/crates/agentswap-codex" }
agentswap-gemini = { path = "../../agentswap/crates/agentswap-gemini" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
