[package]
name = "chatmem"
version = "0.1.1"
description = "ChatMem - Your AI conversations, forever remembered"
authors = ["ChatMem"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["shell-open", "updater"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }

# Vendored AgentSwap parser crates for standalone CI builds
agentswap-core = { path = "../crates/agentswap-core" }
agentswap-claude = { path = "../crates/agentswap-claude" }
agentswap-codex = { path = "../crates/agentswap-codex" }
agentswap-gemini = { path = "../crates/agentswap-gemini" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
