[package]
name = "agentswap-gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
walkdir = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
